--- a/extra_playbooks/roles/kubernetes-apps/cert-manager/templates/cert-self-signed.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/cert-manager/templates/cert-self-signed.yaml.j2
@@ -17,6 +17,10 @@ metadata:
 spec:
   selfSigned: {}
 {% endraw %}
+  spec:
+    ca:
+      secretName: my-cluster-ca-key-pair
+{% endraw %}
 
 ---
 
@@ -24,18 +28,21 @@ spec:
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
-  name: example-com-crt
-  namespace: {{boss__certmanager__example_com_namespace_name}}
+  name: {{boss__certmanager__my_cluster_certificate_name}}
+  namespace: {{boss__certmanager__my_cluster_namespace_name}}
 spec:
-  secretName: example-com-tls
+  secretName: {{boss__certmanager__my_cluster_certificate_name}}-tls
   issuerRef:
     name: selfsigning-issuer
     # We can reference ClusterIssuers by changing the kind here.
     # The default value is Issuer (i.e. a locally namespaced Issuer)
     kind: ClusterIssuer
-  commonName: example.com
+  commonName: {{boss__certmanager__my_cluster_commonName}}
+{% if boss__certmanager__my_cluster_organization is defined %}
   organization:
-  - Example CA
+{{ boss__certmanager__my_cluster_organization | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
+{% if boss__certmanager__my_cluster_dnsNames is defined %}
   dnsNames:
-  - example.com
-  - www.example.com
+{{ boss__certmanager__my_cluster_dnsNames | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
