--- a/extra_playbooks/roles/kubernetes-apps/cert-manager/templates/generate-cluster-issuer-ca.sh.j2
+++ b/extra_playbooks/roles/kubernetes-apps/cert-manager/templates/generate-cluster-issuer-ca.sh.j2
@@ -1,14 +1,11 @@
 #!/usr/bin/env bash
 
-export PATH="/usr/local/opt/openssl/bin:$PATH"
-
 # SOURCE: https://docs.cert-manager.io/en/latest/tasks/issuers/setup-ca.html
 
-
 # Generate a CA private key
-openssl genrsa -out {{ boss__certmanager__manifest_path | expanduser }}/ca.key 2048 && \
+env PATH="/usr/local/opt/openssl/bin:$PATH" openssl genrsa -out {{ boss__certmanager__manifest_path | expanduser }}/ca.key 2048 && \
 # Create a self signed Certificate, valid for 10yrs with the 'signing' option set
-openssl req -x509 -new -nodes -key {{ boss__certmanager__manifest_path | expanduser }}/ca.key -subj "/CN=*.{{domain_root}}" -days 3650 -reqexts v3_req -extensions v3_ca -out {{ boss__certmanager__manifest_path | expanduser }}/ca.crt
+env PATH="/usr/local/opt/openssl/bin:$PATH" openssl req -x509 -new -nodes -key {{ boss__certmanager__manifest_path | expanduser }}/ca.key -subj "/CN=*.{{domain_root}}" -days 3650 -reqexts v3_req -extensions v3_ca -out {{ boss__certmanager__manifest_path | expanduser }}/ca.crt
 
 
 # s:/C=US/ST=Texas/L=Carrollton/O=Woot Inc/CN=*.woot.com
