--- a/extra_playbooks/roles/kubernetes-apps/cert-manager/templates/cert-self-signed.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/cert-manager/templates/cert-self-signed.yaml.j2
@@ -36,7 +36,7 @@ spec:
     # We can reference ClusterIssuers by changing the kind here.
     # The default value is Issuer (i.e. a locally namespaced Issuer)
     kind: ClusterIssuer
-  commonName: {{boss__certmanager__my_cluster_commonName}}
+  commonName: '{{boss__certmanager__my_cluster_commonName}}'
 {% if boss__certmanager__my_cluster_organization is defined %}
   organization:
 {{ boss__certmanager__my_cluster_organization | indent( width=4, indentfirst=True,blank=True) }}
