--- a/extra_playbooks/roles/kubernetes-apps/cert-manager/templates/generate-cluster-issuer-ca.sh.j2
+++ b/extra_playbooks/roles/kubernetes-apps/cert-manager/templates/generate-cluster-issuer-ca.sh.j2
@@ -20,6 +20,6 @@ metadata:
   namespace: {{boss__certmanager__my_cluster_namespace_name}}
 type: kubernetes.io/tls
 data:
-  cert: $(/bin/cat {{ boss__certmanager__manifest_path | expanduser }}/ca.crt | base64 -w0)
-  key: $(/bin/cat {{ boss__certmanager__manifest_path | expanduser }}/ca.key | base64 -w0)
+  tls.crt: $(/bin/cat {{ boss__certmanager__manifest_path | expanduser }}/ca.crt | base64 -w0)
+  tls.key: $(/bin/cat {{ boss__certmanager__manifest_path | expanduser }}/ca.key | base64 -w0)
 EOF
