--- a/extra_playbooks/roles/kubernetes-apps/calico/templates/calico.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/calico/templates/calico.yaml.j2
@@ -15,12 +15,12 @@ data:
   # To enable Typha, set this to "calico-typha" *and* set a non-zero value for Typha replicas
   # below.  We recommend using Typha if you have more than 50 nodes. Above 100 nodes it is
   # essential.
-  typha_service_name: "{{boss__calico__typha_service_name}}"
+  typha_service_name: '{{boss__calico__typha_service_name}}'
   # Configure the Calico backend to use.
   calico_backend: "bird"
 
   # Configure the MTU to use
-  veth_mtu: "1440"
+  veth_mtu: '{{boss__calico__veth_mtu}}'
 
   # The CNI network configuration to install on each node.  The special
   # values in this config will be automatically populated.
@@ -78,10 +78,14 @@ spec:
       protocol: TCP
       targetPort: calico-typha
       name: calico-typha
+{% if boss__calico__enable_prometheus_typha is defined %}
+{% if boss__calico__enable_prometheus_typha == "enabled" %}
     - port: {{boss__calico__typha_PrometheusMetricsPort}}
       targetPort: calico-metrics
       name: calico-metrics
       protocol: TCP
+{% endif %}
+{% endif %}
   selector:
     k8s-app: calico-typha
 
@@ -280,7 +284,7 @@ spec:
               value: "autodetect"
             # Enable IPIP
             - name: CALICO_IPV4POOL_IPIP
-              value: "Always"
+              value: '{{boss__calico__node_env_CALICO_IPV4POOL_IPIP}}'
             # Set MTU for tunnel device used if ipip is enabled
             - name: FELIX_IPINIPMTU
               valueFrom:
@@ -307,6 +311,8 @@ spec:
             # SOURCE: https://docs.projectcalico.org/v3.4/reference/felix/configuration
             - name: FELIX_HEALTHENABLED
               value: "true"
+{% if boss__calico__enable_prometheus_felix is defined %}
+{% if boss__calico__enable_prometheus_felix == "enabled" %}
             # Set to true to enable the Prometheus metrics server in Felix. [Default: false]
             - name: FELIX_PROMETHEUSMETRICSENABLED
               value: "true"
@@ -320,6 +326,8 @@ spec:
             # TCP port that the Prometheus metrics server should bind to
             - name: FELIX_PROMETHEUSMETRICSPORT
               value: "{{ boss__calico__felix_PrometheusMetricsPort }}"
+{% endif %}
+{% endif %}
           securityContext:
             privileged: true
           resources:
