--- a/extra_playbooks/roles/kubernetes-apps/registry/templates/registry-ingress.yml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/registry/templates/registry-ingress.yml.j2
@@ -47,13 +47,6 @@ metadata:
     certmanager.k8s.io/issuer: {{boss__registry__tls_cert_cluster_issuer_name}}
 {% endif %}
 spec:
-{% if boss__registry__enable_tls %}
-  tls:
-  - hosts:
-    - {{boss__registry__subdomain}}.{{domain_root}}
-    secretName: docker-registry-tls-certificate
-{% endif %}
-
   # IMPORTANT
   # SOURCE: https://medium.com/@Oskarr3/setting-up-ingress-on-minikube-6ae825e98f82
   # backend:
@@ -67,3 +60,9 @@ spec:
         backend:
           serviceName: registry-svc-account
           servicePort: 5000
+{% if boss__registry__enable_tls is defined %}
+{% if boss__registry__enable_tls == "enabled" %}
+  tls:
+{{ boss__registry__ingress_tls_config | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
+{% endif %}
