--- a/extra_playbooks/roles/kubernetes-apps/cert-manager/templates/cert-self-signed.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/cert-manager/templates/cert-self-signed.yaml.j2
@@ -9,14 +9,17 @@
 # $ kubectl label namespace <deployment-namespace> certmanager.k8s.io/disable-validation="true"
 
 
-{% raw %}
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: ClusterIssuer
 metadata:
   name: selfsigning-issuer
 spec:
+{% raw %}
   selfSigned: {}
 {% endraw %}
+  spec:
+    ca:
+      secretName: my-cluster-ca-key-pair
 
 ---
 
@@ -24,18 +27,28 @@ spec:
 apiVersion: certmanager.k8s.io/v1alpha1
 kind: Certificate
 metadata:
-  name: example-com-crt
-  namespace: {{boss__certmanager__example_com_namespace_name}}
+  name: {{boss__certmanager__my_cluster_certificate_name}}
+  namespace: {{boss__certmanager__my_cluster_namespace_name}}
 spec:
-  secretName: example-com-tls
+  secretName: {{boss__certmanager__my_cluster_certificate_name}}-tls
+  isCA: true
+  duration: 43800h # 5y
   issuerRef:
     name: selfsigning-issuer
     # We can reference ClusterIssuers by changing the kind here.
     # The default value is Issuer (i.e. a locally namespaced Issuer)
     kind: ClusterIssuer
-  commonName: example.com
+  # SOURCE: https://docs.cert-manager.io/en/latest/tasks/issuers/setup-selfsigned.html
+  # commonName: "my-selfsigned-root-ca"
+  commonName: "{{boss__certmanager__my_cluster_commonName}}"
+{% if boss__certmanager__my_cluster_organization is defined %}
   organization:
-  - Example CA
+{{ boss__certmanager__my_cluster_organization | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
+{% if boss__certmanager__my_cluster_dnsNames is defined %}
   dnsNames:
-  - example.com
-  - www.example.com
+{{ boss__certmanager__my_cluster_dnsNames | indent( width=4, indentfirst=True,blank=True) }}
+{% endif %}
+
+
+# (3/8/2019)FIXME: I totally don't think we did this correctly. We need to setup a real pki, not what we have currently. Try this - https://github.com/jetstack/cert-manager/blob/7df6ce906429296ca9ddccd89384e5827096602c/deploy/manifests/cert-manager.yaml#L1516-L1593
