wip: working es on vagrant

--- a/extra_playbooks/roles/kubernetes-apps/calico/templates/calico.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/calico/templates/calico.yaml.j2
@@ -141,7 +141,7 @@ spec:
         env:
           # Enable "info" logging by default.  Can be set to "debug" to increase verbosity.
           - name: TYPHA_LOGSEVERITYSCREEN
-            value: "info"
+            value: "warn"
           # Disable logging to file and syslog since those don't make sense in Kubernetes.
           - name: TYPHA_LOGFILEPATH
             value: "none"
