wip: fluentd changes

--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/es-statefulset.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/es-statefulset.yaml.j2
@@ -95,8 +95,12 @@ spec:
         name: elasticsearch-logging
 
 {% if boss__efk__elasticsearch_stateful_set_spec_resources is defined %}
+{% if boss__efk__elasticsearch_stateful_set_spec_resources == False %}
+        # resources:
+{% else %}
         resources:
 {{ boss__efk__elasticsearch_stateful_set_spec_resources | indent( width=10, indentfirst=True,blank=True) }}
+{% endif %}
 {% endif %}
         ports:
         - containerPort: 9200
