--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/fluentd-es-ds.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/fluentd-es-ds.yaml.j2
@@ -136,13 +136,16 @@ spec:
         securityContext:
 {{ boss__efk__fluentd_daemon_set_spec_template_spec_securityContext | indent( width=8, indentfirst=True,blank=True) }}
 {% endif %}
+
+{% if boss__efk__fluentd_daemon_set_spec_template_spec_resources is defined %}
+{% if boss__efk__fluentd_daemon_set_spec_template_spec_resources == False %}
+        # resources:
+{% else  %}
         resources:
-          limits:
-            memory: {{boss__efk__fluentd_mem_limit}}
-            # memory: 200Mi
-          requests:
-            cpu: {{boss__efk__fluentd_cpu_requests}}
-            memory: {{boss__efk__fluentd_mem_requests}}
+{{ boss__efk__fluentd_daemon_set_spec_template_spec_resources | indent( width=10, indentfirst=True,blank=True) }}
+{% endif %}
+{% endif %}
+
 {% if boss__efk__fluentd_daemon_set_spec_template_spec_volumeMounts is defined %}
         volumeMounts:
 {{ boss__efk__fluentd_daemon_set_spec_template_spec_volumeMounts | indent( width=8, indentfirst=True,blank=True) }}
