--- a/extra_playbooks/roles/kubernetes-apps/efk/templates/kibana-deployment.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/efk/templates/kibana-deployment.yaml.j2
@@ -32,12 +32,14 @@ spec:
         imagePullPolicy: Always
         # image: docker.elastic.co/kibana/kibana:5.6.2
         image: {{boss__efk__kibana_image_repo}}:{{boss__efk__kibana_image_tag}}
+{% if boss__efk__kibana_deployment_spec_template_spec_resources is defined %}
+{% if boss__efk__kibana_deployment_spec_template_spec_resources == False %}
+        # resources:
+{% else  %}
         resources:
-          # need more cpu upon initialization, therefore burstable class
-          limits:
-            cpu: {{boss__efk__kibana_cpu_limit}}
-          requests:
-            cpu: {{boss__efk__kibana_cpu_requests}}
+{{ boss__efk__kibana_deployment_spec_template_spec_resources | indent( width=10, indentfirst=True,blank=True) }}
+{% endif %}
+{% endif %}
         env:
           - name: ELASTICSEARCH_URL
             value: http://elasticsearch-logging:9200
