--- a/extra_playbooks/roles/kubernetes-apps/metrics-server/templates/resource-reader.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/metrics-server/templates/resource-reader.yaml.j2
@@ -4,7 +4,7 @@ apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRole
 metadata:
   name: system:metrics-server
-  namespace: kube-system
+  # namespace: kube-system
   labels:
     k8s-app: metrics-server
     kubernetes.io/cluster-service: "true"
@@ -30,13 +30,14 @@ rules:
   verbs:
   - get
   - list
+  - update
   - watch
 ---
 apiVersion: rbac.authorization.k8s.io/v1
 kind: ClusterRoleBinding
 metadata:
   name: system:metrics-server
-  namespace: kube-system
+  # namespace: kube-system
   labels:
     k8s-app: metrics-server
     kubernetes.io/cluster-service: "true"
