--- a/extra_playbooks/roles/kubernetes-apps/metrics-server/templates/aggregated-metrics-reader.yaml.j2
+++ b/extra_playbooks/roles/kubernetes-apps/metrics-server/templates/aggregated-metrics-reader.yaml.j2
@@ -3,7 +3,7 @@ kind: ClusterRole
 apiVersion: rbac.authorization.k8s.io/v1
 metadata:
   name: system:aggregated-metrics-reader
-  namespace: kube-system
+  # namespace: kube-system
   labels:
     rbac.authorization.k8s.io/aggregate-to-view: "true"
     rbac.authorization.k8s.io/aggregate-to-edit: "true"
